--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,14 +8,19 @@
         digitaliseringen av byggbranschen.</string>
     <string name="linkedin">https://www.linkedin.com/in/katjatklahr/</string>
     <string name="title_activity_profile">ProfileActivity</string>
+    <string name="profile">Profil</string>
+    <string name="portfolio">Portfolio</string>
+    <string name="see_linkedin">Se Katjas LinkedIn-sida</string>
+
+    <!-- Portfolio Items strings -->
+    <string name="title0">App 1</string>
+    <string name="shortDescription0">Info om app 1</string>
+    <string name="description0">Mer info om app 1</string>
+
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="profile">Profil</string>
-    <string name="portfolio">Portfolio</string>
-    <string name="see_linkedin">Se Katjas LinkedIn-sida</string>
+
 </resources>
