--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="description_dummy">Beskrivning</string>
     <string name="title0">Zonventure</string>
     <string name="shortDescription0">En app med digitala äventyr!</string>
-    <string name="description0">Zonventure är en app för att spela spännande äventyr ute den riktigt världen.
+    <string name="description0">Zonventure är en app för att spela spännande äventyr ute den riktiga världen.
         Den byggdes innan jag lärde mig programmera, men därmot har jag varit involverad i appens
         konceptframtagning samt UI- och UX-design.</string>
     <string name="title1">BMI - kalkylator</string>
